# mk-project

./: README.rst
mk-project-2.1/: ChangeLog  HACKME  Makefile.am  Makefile.in  Makefile.mk  NEWS  README  THANKS  TODO  WHOAMI  aclocal.m4  config.h.in  configure  configure.ac  user_info.sh
mk-project-2.1/MACOSX/: Makefile.am  Makefile.in
mk-project-2.1/MACOSX/mk-project_app/Contents/: Info.plist
mk-project-2.1/MACOSX/mk-project_app/Contents/Resources/: mk-project.icns
mk-project-2.1/data/: Makefile.am  Makefile.in
mk-project-2.1/data/documentation/notice/: .buildinfo  genindex.html  index.html  mk-project-gtk3-types.html  mk-project_about.html  mk-project_build_a_project.html  mk-project_code_formatting.html  mk-project_current_project.html  mk-project_debugging.html  mk-project_documentation.html  mk-project_participating.html  mk-project_presentation.html  mk-project_todo_file_specifications.html  objects.inv  search.html  searchindex.js
mk-project-2.1/data/templates/CXX_Project/: global_vars.c  global_vars.h  main.c
mk-project-2.1/data/templates/CXX_Project/headers/: defines.h  includes.h  obool.h  std_defintion_info.h  tribool.h
mk-project-2.1/data/templates/CXX_Project/lib/: libprint_it.cpp  libprint_it.h
mk-project-2.1/data/templates/C_CXX_Project/: Makefile  README.html  README.rst
mk-project-2.1/data/templates/C_CXX_Project/lib/: Makefile  README.rst
mk-project-2.1/data/templates/C_CXX_Project/subMakefiles/: binary_checks.mk  code_formatter.mk  distributing.mk  documentation.mk  path.mk  sphinx-show.mk  subroutines.mk
mk-project-2.1/data/templates/C_Project/: README.md  global_vars.c  global_vars.h  main.c  stddump.c
mk-project-2.1/data/templates/C_Project/headers/: defines.h  includes.h  tribool.h
mk-project-2.1/data/templates/C_Project/lib/: libprint_it.c  libprint_it.h
mk-project-2.1/data/templates/Py_Project/: Makefile  mk-project.py
mk-project-2.1/data/templates/Py_Project/subMakefiles/: code_formatter.mk
mk-project-2.1/data/templates/desktop/: desktop.tmpl
mk-project-2.1/data/templates/license/: Apache_2.0.tmpl  FreeBSD.tmpl  agpl.tmpl  fdl.tmpl  lgpl.tmpl
mk-project-2.1/data/templates/licenses/Apache_2.0/: Apache_2.0.dbk  Apache_2.0.epub  Apache_2.0.html  Apache_2.0.tex  Apache_2.0.texi
mk-project-2.1/data/templates/licenses/Clear_BSD/: Clear_BSD.dbk  Clear_BSD.epub  Clear_BSD.html  Clear_BSD.tex  Clear_BSD.texi
mk-project-2.1/data/templates/licenses/Free_BSD/: Free_BSD.dbk  Free_BSD.epub  Free_BSD.html  Free_BSD.tex  Free_BSD.texi
mk-project-2.1/data/templates/licenses/agpl/: agpl.epub  agpl.html
mk-project-2.1/data/templates/licenses/fdl/: fdl.dbk  fdl.epub  fdl.html
mk-project-2.1/data/templates/licenses/gpl/: gpl.epub  gpl.html
mk-project-2.1/data/templates/licenses/lgpl/: lgpl.epub  lgpl.html  lgpl.tex
mk-project-2.1/data/templates/scripts/: prepend_license.py
mk-project-2.1/desktop/: Makefile.am  Makefile.in
mk-project-2.1/doc/: Makefile.am  Makefile.in  mk-project.html
mk-project-2.1/man/: Makefile.am  Makefile.in  mk-project.1
mk-project-2.1/src/: Makefile.am  Makefile.in  global_vars.c  global_vars.h  main.c  structures_initialize.c  structures_initialize.h
mk-project-2.1/src/GUI/: GtkSmartIconButton.c  GtkSmartIconButton.h  GtkSmartMenuItem.c  GtkSmartMenuItem.h  gui_callback.c  gui_callback.h  message_dialog.c  message_dialog.h  setup_gui.c  setup_gui.h
mk-project-2.1/src/cmdline/: cmdline.c  cmdline.h
mk-project-2.1/src/configuration/: configuration_dialog.c  configuration_dialog.h  configuration_storing.c  configuration_storing.h
mk-project-2.1/src/headers/: defines.h  includes.h
mk-project-2.1/src/headers/structures/: GUI_structures.h  Project_structure.h  Settings_structure.h
mk-project-2.1/src/make/: make_actions.c  make_actions.h  make_menu.c  make_menu.h  make_utils.c  make_utils.h
mk-project-2.1/src/project/: fmt_files.c  fmt_files.h  load_project.c  load_project.h  new_project.c  new_project.h  project.c  project.h  project_functions.c  project_functions.h  reconf_project.c  reconf_project.h
mk-project-2.1/src/terminals/: GtkMkTerm.c  GtkMkTerm.h  GtkMkTermTab.c  GtkMkTermTab.h  terminals.c  terminals.h  terminals_callback.c  terminals_callback.h
mk-project-2.1/src/xml_utils/: xml_getter.c  xml_getter.h  xml_utils.c  xml_utils.h  xml_writer.c  xml_writer.h
mk-project-2.1/texi/: Makefile.am  Makefile.in  mk-project.info  mk-project.texi
