# Copyright (c)  2016,2017  Brüggemann Eddie.
# Permission is granted to copy, distribute and/or modify this document
# under the terms of the GNU Free Documentation License, Version 1.3
# or any later version published by the Free Software Foundation;
# with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
# A copy of the license is included in the section entitled "GNU
# Free Documentation License".

SUBDIRS = . src data man texi desktop doc MACOSX

nobase_pkgdata_DATA   =       ./src/*.c \
                              ./src/*.h \
                              ./src/headers/*.h \
                              ./src/headers/structures/*.h \
                              ./src/GUI/*.c \
                              ./src/GUI/*.h \
                              ./src/cmdline/*.c \
                              ./src/cmdline/*.h \
                              ./src/configuration/*.c \
                              ./src/configuration/*.h \
                              ./src/make/*.c \
                              ./src/make/*.h \
                              ./src/project/*.c \
                              ./src/project/*.h \
                              ./src/terminals/*.c \
                              ./src/terminals/*.h \
                              ./src/xml_utils/*.c \
                              ./src/xml_utils/*.h \
                              ./Makefile.mk \
                              ./TODO \
                              ./HACKME \
                              ./WHOAMI \
                              ./user_info.sh

                      
                     
                     
EXTRA_DIST = ./Makefile.mk \
             ./MACOSX/mk-project_app/Contents/Info.plist \
             ./MACOSX/mk-project_app/Contents/Resources/mk-project.icns \
             ./TODO \
             ./HACKME \
             ./WHOAMI \
             ./user_info.sh


