# Copyright (c)  2016,2017  Brüggemann Eddie.
# Permission is granted to copy, distribute and/or modify this document
# under the terms of the GNU Free Documentation License, Version 1.3
# or any later version published by the Free Software Foundation;
# with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
# A copy of the license is included in the section entitled "GNU
# Free Documentation License".

nobase_dist_pkgdata_DATA   =  ./documentation/notice/mk-project_build_a_project.html \
                              ./documentation/notice/mk-project_code_formatting.html \
                              ./documentation/notice/_sources/mk-project_debugging.rst.txt \
                              ./documentation/notice/_sources/mk-project_current_project.rst.txt \
                              ./documentation/notice/_sources/mk-project_about.rst.txt \
                              ./documentation/notice/_sources/mk-project_code_formatting.rst.txt \
                              ./documentation/notice/_sources/mk-project_todo_file_specifications.rst.txt \
                              ./documentation/notice/_sources/mk-project-gtk3-types.rst.txt \
                              ./documentation/notice/_sources/mk-project_presentation.rst.txt \
                              ./documentation/notice/_sources/index.rst.txt \
                              ./documentation/notice/_sources/mk-project_documentation.rst.txt \
                              ./documentation/notice/_sources/mk-project_build_a_project.rst.txt \
                              ./documentation/notice/_sources/mk-project_participating.rst.txt \
                              ./documentation/notice/mk-project_participating.html \
                              ./documentation/notice/mk-project_todo_file_specifications.html \
                              ./documentation/notice/mk-project-gtk3-types.html \
                              ./documentation/notice/objects.inv \
                              ./documentation/notice/_static/searchtools.js \
                              ./documentation/notice/_static/basic.css \
                              ./documentation/notice/_static/file.png \
                              ./documentation/notice/_static/down.png \
                              ./documentation/notice/_static/doctools.js \
                              ./documentation/notice/_static/up.png \
                              ./documentation/notice/_static/down-pressed.png \
                              ./documentation/notice/_static/ajax-loader.gif \
                              ./documentation/notice/_static/nature.css \
                              ./documentation/notice/_static/mk-project_icon.png \
                              ./documentation/notice/_static/up-pressed.png \
                              ./documentation/notice/_static/comment-bright.png \
                              ./documentation/notice/_static/comment.png \
                              ./documentation/notice/_static/pygments.css \
                              ./documentation/notice/_static/jquery.js \
                              ./documentation/notice/_static/underscore.js \
                              ./documentation/notice/_static/comment-close.png \
                              ./documentation/notice/_static/websupport.js \
                              ./documentation/notice/_static/minus.png \
                              ./documentation/notice/_static/plus.png \
                              ./documentation/notice/mk-project_debugging.html \
                              ./documentation/notice/search.html \
                              ./documentation/notice/index.html \
                              ./documentation/notice/searchindex.js \
                              ./documentation/notice/mk-project_about.html \
                              ./documentation/notice/mk-project_presentation.html \
                              ./documentation/notice/genindex.html \
                              ./documentation/notice/mk-project_documentation.html \
                              ./documentation/notice/mk-project_current_project.html \
                              ./documentation/notice/.buildinfo \
                              ./documentation/notice/.nojekyll \
                              ./icons/set/42x42/mk-project_icon.png \
                              ./icons/set/128x128/mk-project_icon.png \
                              ./icons/set/72x72/mk-project_icon.png \
                              ./icons/set/48x48/mk-project_icon.png \
                              ./icons/set/192x192/mk-project_icon.png \
                              ./icons/set/16x16/mk-project_icon.png \
                              ./icons/set/64x64/mk-project_icon.png \
                              ./icons/set/22x22/mk-project_icon.png \
                              ./icons/set/36x36/mk-project_icon.png \
                              ./icons/set/512x512/mk-project_icon.png \
                              ./icons/set/32x32/mk-project_icon.png \
                              ./icons/set/256x256/mk-project_icon.png \
                              ./icons/set/96x96/mk-project_icon.png \
                              ./icons/set/24x24/mk-project_icon.png \
                              ./icons/mk-project_icon.png \
                              ./icons/16x16/user-info.png \
                              ./icons/16x16/utilities-log-viewer.png \
                              ./icons/16x16/applications-development-web.png \
                              ./icons/16x16/applications-development.png \
                              ./icons/16x16/preferences-other.png \
                              ./icons/16x16/preferences-system.png \
                              ./icons/16x16/user-desktop.png \
                              ./icons/16x16/terminal-down-black.png \
                              ./icons/16x16/applications-development-translation.png \
                              ./icons/16x16/preferences-desktop.png \
                              ./icons/16x16/help-about.png \
                              ./icons/16x16/computer.png \
                              ./icons/16x16/yakuake.png \
                              ./icons/16x16/document-readme.png \
                              ./icons/16x16/folder-activities.png \
                              ./icons/16x16/project-open.png \
                              ./icons/16x16/folder-tar.png \
                              ./icons/16x16/window-close.png \
                              ./icons/16x16/terminal-down-red.png \
                              ./icons/16x16/folder-development.png \
                              ./icons/16x16/preferences-desktop-filetype-association.png \
                              ./icons/16x16/utilities-terminal.png \
                              ./icons/22x22/flag-blue.png \
                              ./icons/22x22/dialog-warning.png \
                              ./icons/22x22/flag-yellow.png \
                              ./icons/22x22/flag-black.png \
                              ./icons/22x22/flag-green.png \
                              ./icons/22x22/flag-red.png \
                              ./license/gpl.html \
                              ./license/gpl.txt \
                              ./templates/Py_Project/pindent.py \
                              ./templates/Py_Project/mk-project.py \
                              ./templates/Py_Project/subMakefiles/code_formatter.mk \
                              ./templates/Py_Project/Makefile \
                              ./templates/C_Project/main.c \
                              ./templates/C_Project/lib/libprint_it.c \
                              ./templates/C_Project/lib/libprint_it.h \
                              ./templates/C_Project/stddump.c \
                              ./templates/C_Project/global_vars.h \
                              ./templates/C_Project/headers/includes.h \
                              ./templates/C_Project/headers/tribool.h \
                              ./templates/C_Project/headers/defines.h \
                              ./templates/C_Project/headers/std_defintion_info.h \
                              ./templates/C_Project/headers/obool.h \
                              ./templates/C_Project/global_vars.c \
                              ./templates/C_Project/README.md \
                              ./templates/scripts/prepend_license.py \
                              ./templates/licenses/lgpl/lgpl.html \
                              ./templates/licenses/lgpl/lgpl.texi \
                              ./templates/licenses/lgpl/lgpl.dbk \
                              ./templates/licenses/lgpl/lgpl.tex \
                              ./templates/licenses/lgpl/lgpl.pdf \
                              ./templates/licenses/lgpl/lgpl.epub \
                              ./templates/licenses/lgpl/lgpl.txt \
                              ./templates/licenses/Clear_BSD/Clear_BSD.tex \
                              ./templates/licenses/Clear_BSD/Clear_BSD.html \
                              ./templates/licenses/Clear_BSD/Clear_BSD.texi \
                              ./templates/licenses/Clear_BSD/Clear_BSD.pdf \
                              ./templates/licenses/Clear_BSD/Clear_BSD.epub \
                              ./templates/licenses/Clear_BSD/Clear_BSD.txt \
                              ./templates/licenses/Clear_BSD/Clear_BSD.dbk \
                              ./templates/licenses/fdl/fdl.html \
                              ./templates/licenses/fdl/fdl.tex \
                              ./templates/licenses/fdl/fdl.epub \
                              ./templates/licenses/fdl/fdl.dbk \
                              ./templates/licenses/fdl/fdl.texi \
                              ./templates/licenses/fdl/fdl.txt \
                              ./templates/licenses/fdl/fdl.xml \
                              ./templates/licenses/fdl/fdl.pdf \
                              ./templates/licenses/gpl/gpl.html \
                              ./templates/licenses/gpl/gpl.tex \
                              ./templates/licenses/gpl/gpl.epub \
                              ./templates/licenses/gpl/gpl.pdf \
                              ./templates/licenses/gpl/gpl.txt \
                              ./templates/licenses/gpl/gpl.dbk \
                              ./templates/licenses/gpl/gpl.texi \
                              ./templates/licenses/Apache_2.0/Apache_2.0.tex \
                              ./templates/licenses/Apache_2.0/Apache_2.0.dbk \
                              ./templates/licenses/Apache_2.0/Apache_2.0.pdf \
                              ./templates/licenses/Apache_2.0/Apache_2.0.txt \
                              ./templates/licenses/Apache_2.0/Apache_2.0.html \
                              ./templates/licenses/Apache_2.0/Apache_2.0.texi \
                              ./templates/licenses/Apache_2.0/Apache_2.0.epub \
                              ./templates/licenses/Free_BSD/Free_BSD.dbk \
                              ./templates/licenses/Free_BSD/Free_BSD.txt \
                              ./templates/licenses/Free_BSD/Free_BSD.texi \
                              ./templates/licenses/Free_BSD/Free_BSD.epub \
                              ./templates/licenses/Free_BSD/Free_BSD.tex \
                              ./templates/licenses/Free_BSD/Free_BSD.html \
                              ./templates/licenses/Free_BSD/Free_BSD.pdf \
                              ./templates/licenses/agpl/agpl.pdf \
                              ./templates/licenses/agpl/agpl.tex \
                              ./templates/licenses/agpl/agpl.txt \
                              ./templates/licenses/agpl/agpl.epub \
                              ./templates/licenses/agpl/agpl.dbk \
                              ./templates/licenses/agpl/agpl.texi \
                              ./templates/licenses/agpl/agpl.html \
                              ./templates/desktop/desktop.tmpl \
                              ./templates/license/FreeBSD.tmpl \
                              ./templates/license/ClearBSD.tmpl \
                              ./templates/license/fdl.tmpl \
                              ./templates/license/agpl.tmpl \
                              ./templates/license/lgpl.tmpl \
                              ./templates/license/Apache_2.0.tmpl \
                              ./templates/license/gpl.tmpl \
                              ./templates/C_CXX_Project/lib/Makefile \
                              ./templates/C_CXX_Project/lib/README.rst \
                              ./templates/C_CXX_Project/README.html \
                              ./templates/C_CXX_Project/subMakefiles/code_formatter.mk \
                              ./templates/C_CXX_Project/subMakefiles/documentation.mk \
                              ./templates/C_CXX_Project/subMakefiles/distributing.mk \
                              ./templates/C_CXX_Project/subMakefiles/binary_checks.mk \
                              ./templates/C_CXX_Project/subMakefiles/subroutines.mk \
                              ./templates/C_CXX_Project/subMakefiles/sphinx-show.mk \
                              ./templates/C_CXX_Project/subMakefiles/path.mk \
                              ./templates/C_CXX_Project/Makefile \
                              ./templates/C_CXX_Project/README.rst \
                              ./templates/CXX_Project/main.c \
                              ./templates/CXX_Project/lib/libprint_it.h \
                              ./templates/CXX_Project/lib/libprint_it.cpp \
                              ./templates/CXX_Project/stddump.c \
                              ./templates/CXX_Project/global_vars.h \
                              ./templates/CXX_Project/headers/includes.h \
                              ./templates/CXX_Project/headers/tribool.h \
                              ./templates/CXX_Project/headers/defines.h \
                              ./templates/CXX_Project/headers/std_defintion_info.h \
                              ./templates/CXX_Project/headers/obool.h \
                              ./templates/CXX_Project/global_vars.c
                                                         
